Almost fixed alignment issues

--- a/src/assets/css/ScrollSnap.css
+++ b/src/assets/css/ScrollSnap.css
@@ -19,84 +19,44 @@
     -ms-scroll-snap-type: mandatory;
     scroll-snap-points-x: repeat(100%);
     -ms-scroll-snap-points-x: repeat(100%);
+}
+
+  .page1{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+      flex-direction: column;
+      scroll-snap-align: start;
+  }
+  
+  .page2{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    scroll-snap-align: start;
+    background-color: white;
   }
 
 
-.main-scroll{
-    border: thick yellow solid;
-}
-
-.container div{
-    justify-content: center;
-    align-items: center;
-}
-
-.container div:nth-child(1){
-    display: flex;
-    flex-direction: column;
-    scroll-snap-align: start;
-}
-
-
-.container div:nth-child(1) div:nth-child(1) div div {
-    top: 20%;
-}
-
-.container div:nth-child(2){
-    display: grid;
-    height: 100%;
-    scroll-snap-align: start;
-}
-
-
-.container div:nth-child(1) div{
-    display: block;
-    flex-direction: column;
-    width: 100%;
-    position: relative;
-}
-
-.container div:nth-child(2) div{
-    display: flex;
-    z-index: 10;
-}
-
-.container div:nth-child(2) div:nth-child(2){
-    position: absolute;
-    top: 0;
-    left: 0;
-    border: thin black solid;
-    width: 100%;
-    z-index: 1;
-}
-
-.container div:nth-child(1) div div{
-    display: flex;;
-}
-
 .scroll-div{
-    height: 100%;
-}
-
-.container div:nth-child(1) div:nth-child(2){
-display: flex;
-width: 100%;
-right:0;
-}
-
-
+    height: 100%;}
 
 @media only screen and (max-width:1023px){
     .container{
-        scroll-snap-type: none;
         grid-template-columns: auto;
         grid-template-rows: 100% 100%;
         overflow-y: scroll;
     }
-}
 
-@media only screen and (min-width:1024px){
-    .container div:nth-child(1) div div:nth-child(2){
-        top: 20%;
+    #carousel.snap{
+    scroll-snap-type: none;
+    -webkit-overflow-scrolling: none; /* Needed to work on iOS Safari */
+    scroll-snap-type: none;
+    -ms-scroll-snap-type: none;
+    scroll-snap-points-x: none;
+    -ms-scroll-snap-points-x: none;
     }
 }
